{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 64,
  "lineage": "0c3ffd96-6d26-4fa3-8f22-9db18fe507d4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/frontendIPConfigurations/frontend",
                "load_balancer_rules": [
                  "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/loadBalancingRules/rule-https"
                ],
                "name": "frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/publicIPAddresses/pip-loadbalancer"
              }
            ],
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea",
            "location": "swedencentral",
            "name": "LB-Althea",
            "resource_group_name": "RG-Althea-Systems",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip_lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web1/ipConfigurations/internal",
              "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web2/ipConfigurations/internal"
            ],
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/backendAddressPools/backend-pool",
            "load_balancing_rules": [
              "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/loadBalancingRules/rule-https"
            ],
            "loadbalancer_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea",
            "name": "backend-pool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.pip_lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/probes/probe-https",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea",
            "name": "probe-https",
            "number_of_probes": 2,
            "port": 443,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.pip_lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/backendAddressPools/backend-pool"
            ],
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/frontendIPConfigurations/frontend",
            "frontend_ip_configuration_name": "frontend",
            "frontend_port": 443,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/loadBalancingRules/rule-https",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea",
            "name": "rule-https",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.pool",
            "azurerm_public_ip.pip_lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-compta",
            "internal_domain_name_suffix": "5bwag1fibnwe1as5drlyo1e50g.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/publicIPAddresses/pip-compta",
                "subnet_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Prod"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-ED-8D-AD-93-25",
            "name": "nic-compta",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "RG-Althea-Systems",
            "virtual_machine_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Compute/virtualMachines/VM-Compta"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pip_compta",
            "azurerm_resource_group.rg",
            "azurerm_subnet.prod",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web1",
            "internal_domain_name_suffix": "5bwag1fibnwe1as5drlyo1e50g.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-DMZ"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "60-45-BD-FD-EE-FF",
            "name": "nic-web1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "RG-Althea-Systems",
            "virtual_machine_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Compute/virtualMachines/VM-Web1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web2",
            "internal_domain_name_suffix": "5bwag1fibnwe1as5drlyo1e50g.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-DMZ"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "mac_address": "7C-ED-8D-9D-DA-6D",
            "name": "nic-web2",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "RG-Althea-Systems",
            "virtual_machine_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Compute/virtualMachines/VM-Web2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "assoc_web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/backendAddressPools/backend-pool",
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web1/ipConfigurations/internal|/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.pool",
            "azurerm_network_interface.nic_web1",
            "azurerm_public_ip.pip_lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "assoc_web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/backendAddressPools/backend-pool",
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web2/ipConfigurations/internal|/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/loadBalancers/LB-Althea/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkInterfaces/nic-web2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.pool",
            "azurerm_network_interface.nic_web2",
            "azurerm_public_ip.pip_lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkSecurityGroups/NSG-DMZ",
            "location": "swedencentral",
            "name": "NSG-DMZ",
            "resource_group_name": "RG-Althea-Systems",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod",
            "location": "swedencentral",
            "name": "NSG-Prod",
            "resource_group_name": "RG-Althea-Systems",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-Admin",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-DMZ-to-DB",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_compta",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/publicIPAddresses/pip-compta",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.91.143.117",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-compta",
            "resource_group_name": "RG-Althea-Systems",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/publicIPAddresses/pip-loadbalancer",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.95.89",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "pip-loadbalancer",
            "resource_group_name": "RG-Althea-Systems",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Admin",
            "name": "Subnet-Admin",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Althea-Systems",
            "virtual_network_name": "VNet-Althea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-DMZ",
            "name": "Subnet-DMZ",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Althea-Systems",
            "virtual_network_name": "VNet-Althea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Prod",
            "name": "Subnet-Prod",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Althea-Systems",
            "virtual_network_name": "VNet-Althea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-DMZ",
            "network_security_group_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkSecurityGroups/NSG-DMZ",
            "subnet_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-DMZ"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_dmz",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dmz",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Prod",
            "network_security_group_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod",
            "subnet_id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Prod"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_prod",
            "azurerm_resource_group.rg",
            "azurerm_subnet.prod",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6c036cf8-0ba8-4d6c-825f-1c57876c9fd6",
            "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea",
            "location": "swedencentral",
            "name": "VNet-Althea",
            "resource_group_name": "RG-Althea-Systems",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Prod",
                "name": "Subnet-Prod",
                "security_group": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-DMZ",
                "name": "Subnet-DMZ",
                "security_group": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/networkSecurityGroups/NSG-DMZ"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/48485630-7030-4241-9d03-233f69916918/resourceGroups/RG-Althea-Systems/providers/Microsoft.Network/virtualNetworks/VNet-Althea/subnets/Subnet-Admin",
                "name": "Subnet-Admin"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}